@@ -1,3 +1,8 @@
+2013-04-30 Andrea Bocci <andrea.bocci@cern.ch>
+	* tag V01-06-68
+	* set up a VIEW over ADG to access the WBM run summary
+	* update BrowserConverter.java access WBM over ADG to map run numbers to HLT
+
 2013-01-09 Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V01-06-67
 	* fix Java7 compilation problem (renaming a static method)
